fix: overflow at slider component

--- a/app/components/slider/slider-component.css
+++ b/app/components/slider/slider-component.css
@@ -2,12 +2,13 @@
   overflow: hidden;
   display: flex;
   height: 230px;
+  position: relative;
 }
 
 #reel img{
   transition: all linear .55s;
   flex: 1;
-  width: 200%;
+  width: 100%;
   position: absolute;
   left: 0;
 }
